Removed width from image constructor as I want pictures to stay in proportion. Seems to cause issues when navigating a carousel however, so defined a width in the css and hidden overflow.

--- a/webapp/static/style/layouts/540p.css
+++ b/webapp/static/style/layouts/540p.css
@@ -7,3 +7,11 @@
 	background: #fff;
 	color: #000;
 }
+
+.albumphoto {
+	padding:20px;
+}
+.albumphoto .image {
+	width:300px;
+	overflow: hidden;
+}
